--- a/menyval1.html
+++ b/menyval1.html
@@ -54,8 +54,17 @@
    
     <img src="bilder/sot hund.jpg">
     <img src="bilder/sot kanin.jpg">
-    <img src="bilder/sotkanin1.jpg">
-    
-    </main>
+    <img src="bilder/sal.jpg">
+    <img src="bilder/sotkanin1.png" id= sotkanin1>
+    <img src="bilder/hast.jpg">
+     <img src="bilder/hello.png" id=hello>
+    <img src="bilder/hello1.jpg">
+    <img src="bilder/sothund6.jpg">
+     <img src="bilder/sothund2.jpg">
+    <img src="bilder/sot2.jpg">
+    <img src="bilder/sothund3.jpg">
+    <img src="bilder/sotekorre.jpg">
+
+     </main>
 </body>
 </html>
