--- a/menyval2.html
+++ b/menyval2.html
@@ -87,6 +87,17 @@
     <h6>Tillsätt fyllningen av nutella och tillaga ytterligare 40 sekunder(800 watt).</h6>
     <h6>Låt stå och svalna i 1 minut innan servering</h6>
     <img src="bilder/isglass.jpg" id="isglass">
+    <h2>ISGLASS MED FLÄDER OCH JORDGUBBAR!</h2>
+    <h4>TID:</h4>
+    <h6>5 min + minst 5 timmar i frysen.</h6>
+    <h6>Kommer garanterat göra succe´.</h6>
+    <h6>8 stycken</h6>
+    <li>ca 8dl flädercider eller annat cider</li>
+    <li>ca 16 stora jordgubbar, 8 pinnglassformar</li>
+    <h5>GÖR SÅ HÄR:</h5>
+    <h6>1.Skär jordgubbar i skivor och tryck ner i glassformarna.</h6>
+    <h6>2.Häll i cider stick ner pinnarna. Ställ i frysen minst 5 timmar. Ta ut 10 minuter innan det ska ätas</h6>
+
     </ul>
     </main>
 </body>
